(feature/event_producer): simple match event being produced

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,9 @@
 # Configure the Kafka broker location
 kafka.bootstrap.servers=localhost:9092
 
-mp.messaging.outgoing.matches_a.connector=smallrye-kafka
-mp.messaging.outgoing.matches_a.key.serializer=org.apache.kafka.common.serialization.IntegerSerializer
-mp.messaging.outgoing.matches_a.value.serializer=org.apache.kafka.common.serialization.StringSerializer
-
-mp.messaging.outgoing.matches_b.connector=smallrye-kafka
-mp.messaging.outgoing.matches_b.key.serializer=org.apache.kafka.common.serialization.IntegerSerializer
-mp.messaging.outgoing.matches_b.value.serializer=org.apache.kafka.common.serialization.StringSerializer
+mp.messaging.outgoing.matches.connector=smallrye-kafka
+mp.messaging.outgoing.matches.key.serializer=org.apache.kafka.common.serialization.IntegerSerializer
+mp.messaging.outgoing.matches.value.serializer=org.apache.kafka.common.serialization.StringSerializer
 
 
 kafka-streams.consumer.session.timeout.ms=250
