--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,12 @@
-# Configure the Kafka broker location
-kafka.bootstrap.servers=localhost:9092
+# Quarkus and Application configs
+quarkus.http.port=8080
+quarkus.kafka.health.enabled=true
+quarkus.native.additional-build-args=-H:ResourceConfigurationFiles=resources-config.json,-H:ReflectionConfigurationFiles=reflection-config.json
+# ,--initialize-at-run-time=blog.tech.lyamada.EventGenerator.java
+
+# Configure Kafka configs
+kafka.bootstrap.servers=${KAFKA_BROKERS}
 
 mp.messaging.outgoing.matches.connector=smallrye-kafka
 mp.messaging.outgoing.matches.key.serializer=org.apache.kafka.common.serialization.IntegerSerializer
 mp.messaging.outgoing.matches.value.serializer=org.apache.kafka.common.serialization.StringSerializer
-
-
-kafka-streams.consumer.session.timeout.ms=250
-kafka-streams.consumer.heartbeat.interval.ms=200
